--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,32 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+/* background */
 .container {
   position: relative;
-  width: 100vw;
-  height: 100vh;
   background-color: lightgray;
-  background-image: url(bg/start.png);
-  background-size: cover;
-
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+.bg img {
+  width: 100%;
+  height: 100vh;
+}
+
 /* Button */
+.button {
+  position: absolute;
+}
+
 button {
   min-width: 200px;
   min-height: 50px;
@@ -26,19 +38,9 @@ button {
   background-color: rgb(170, 245, 255);
   border: 3px solid rgb(0, 0, 0);
   border-radius: 10px;
-
-  margin-bottom: 15px;
+  margin: 10px;
   padding: 10px;
-
   font-size: 2rem;
-
-  justify-self: center;
-
-  /* transform: translate(50, 50);
-  left: 50%;
-  position: absolute;
-  top: 50%;
-} */
 }
 
 /* hide button */
@@ -60,24 +62,15 @@ button {
 
 /* media queries */
 @media only screen and (max-width: 600px) {
-  button {
-    /* color: aqua; */
-    font-size: 2rem;
-    padding: 10px;
+  .button {
+    bottom: -140%;
   }
 
-  body {
-    width: 100vw;
-    height: 100vh;
+  .bg img {
+    height: auto;
   }
 
-  .container {
-    background-size: 100vw;
-    background-repeat: no-repeat;
-    overflow: hidden;
+  .dialog {
+    font-size: 1.8rem;
   }
-}
-
-.dialog {
-  font-size: 1.8rem;
 }
